Correção de instalação do pacote node_modules após inicialização do container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,18 +20,16 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./nodejs:/app
+      - /app/node_modules
     environment:
       - MYSQL_HOST=mdb
       - MYSQL_USER=root
       - MYSQL_PASSWORD=root
       - MYSQL_DATABASE=nodedb
+    entrypoint: ["sh", "-c", "npm install && node index.js"]
     depends_on:
-      - mdb
-    healthcheck:
-      test: ["CMD", "node", "-e", "require('mysql').createConnection({host: 'mdb', user: 'root', password: 'root', database: 'nodedb'}).connect(err => { if (err) process.exit(1); process.exit(0); })"]
-      interval: 10s
-      retries: 10
-      timeout: 5s
+      mdb:
+        condition: service_healthy
     networks:
       - fullcycle-network
 
@@ -44,6 +42,11 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: nodedb
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
     volumes:
       - ./mysql:/var/lib/mysql
     networks:
